vlib/v/checker/tests/import_symbol_private_err.vv
import v.scanner
import v.parser
import time { now, since }
import io { ReaderWriterImpl }

fn main() {
	println(scanner.single_quote)
	println(parser.State.html)
	since(now())
	_ = map{'h': 2}.exists('h')
	_ = ReaderWriterImpl{}
}
